[gd_scene load_steps=10 format=3 uid="uid://401uxdkbki2j"]

[ext_resource type="Texture2D" uid="uid://cbfrhflm0h4t" path="res://assets/art/ui/ui_title_panel.png" id="1_81buc"]
[ext_resource type="FontFile" uid="uid://bea8ylosd4llw" path="res://assets/fonts/BebasNeue-Regular.ttf" id="1_grftj"]
[ext_resource type="Script" uid="uid://b60uac46jdg20" path="res://screens/title_screen.gd" id="1_sxlwc"]
[ext_resource type="Texture2D" uid="uid://82kt0rycypv3" path="res://assets/art/backgrounds/bg_japan_store.jpg" id="2_n8gtu"]
[ext_resource type="Shader" uid="uid://d1i108wqmp4ok" path="res://shaders/color_tint.tres" id="2_txg6x"]
[ext_resource type="Theme" uid="uid://b12k0qovw7yqg" path="res://materials/title_menu_theme.tres" id="6_txg6x"]
[ext_resource type="Texture2D" uid="uid://dj2fja8qictc0" path="res://assets/art/ui/ui_cursor.png" id="7_7jf2m"]
[ext_resource type="AudioStream" uid="uid://cla3iygrcfljy" path="res://assets/audio/music/bgm_title_menu.ogg" id="8_dsjsu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7jf2m"]
shader = ExtResource("2_txg6x")
shader_parameter/ColorTint = Color(0.435294, 0.435294, 0.647059, 1)

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_sxlwc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureBG" type="TextureRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_7jf2m")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n8gtu")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0.533333)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBox" type="NinePatchRect" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 39.0
offset_top = 45.0
offset_right = -39.0
offset_bottom = 229.0
grow_horizontal = 2
texture = ExtResource("1_81buc")
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="TitleLabel" type="Label" parent="CanvasLayer/TitleBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -369.0
offset_top = -77.5
offset_right = 369.0
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_grftj")
theme_override_font_sizes/font_size = 128
text = "SUPER MAIRO BORS"

[node name="MenuOptions" type="VBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_right = 148.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayLabel" type="Label" parent="CanvasLayer/MenuOptions"]
layout_mode = 2
theme = ExtResource("6_txg6x")
text = "Jugar"

[node name="HelpLabel" type="Label" parent="CanvasLayer/MenuOptions"]
layout_mode = 2
theme = ExtResource("6_txg6x")
text = "Ayuda"

[node name="AboutLabel" type="Label" parent="CanvasLayer/MenuOptions"]
layout_mode = 2
theme = ExtResource("6_txg6x")
text = "Sobre el juego..."

[node name="QuitLabel" type="Label" parent="CanvasLayer/MenuOptions"]
layout_mode = 2
theme = ExtResource("6_txg6x")
text = "Salir"

[node name="SelectArrow" type="Sprite2D" parent="CanvasLayer"]
unique_name_in_owner = true
position = Vector2(381, 347)
texture = ExtResource("7_7jf2m")

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_dsjsu")
autoplay = true
parameters/looping = true
